--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.tymelear.org">
 <head>
   <link rel="stylesheet" href="/static/style.css" >
     <meta charset="UTF-8">
